# dee-ink

./: .gitignore  CLAUDE.md  Cargo.toml  FRAMEWORK.md  LICENSE  README.md
crates/dee-amazon/: AGENT.md  Cargo.toml  README.md
crates/dee-amazon/src/: main.rs
crates/dee-amazon/tests/: cli_contract.rs
crates/dee-arxiv/: AGENT.md  Cargo.toml  README.md
crates/dee-arxiv/src/: main.rs
crates/dee-arxiv/tests/: json_errors.rs
crates/dee-contacts/: AGENT.md  Cargo.toml  README.md
crates/dee-contacts/src/: main.rs
crates/dee-contacts/tests/: cli_contract.rs
crates/dee-crosspost/: AGENT.md  Cargo.toml  README.md
crates/dee-crosspost/src/: cli.rs  db.rs  error.rs  main.rs  models.rs  providers.rs
crates/dee-crosspost/tests/: cli_contract.rs
crates/dee-ebay/: AGENT.md  Cargo.toml  README.md
crates/dee-ebay/src/: main.rs
crates/dee-ebay/tests/: cli_contract.rs
crates/dee-events/: AGENT.md  Cargo.toml  README.md
crates/dee-events/src/: main.rs
crates/dee-events/tests/: json_errors.rs
crates/dee-feed/: AGENT.md  Cargo.toml  README.md
crates/dee-feed/migrations/: 001_initial.sql
crates/dee-feed/src/: main.rs
crates/dee-feed/tests/: feed_cache.rs  fetch_scope.rs  quiet_mode.rs
crates/dee-food/: AGENT.md  Cargo.toml  README.md
crates/dee-food/src/: main.rs
crates/dee-food/tests/: json_errors.rs
crates/dee-gas/: AGENT.md  Cargo.toml  README.md
crates/dee-gas/src/: main.rs
crates/dee-gas/tests/: json_errors.rs
crates/dee-habit/: AGENT.md  Cargo.toml  README.md
crates/dee-habit/src/: main.rs
crates/dee-habit/tests/: cli_contract.rs
crates/dee-hn/: AGENT.md  Cargo.toml  README.md
crates/dee-hn/src/: main.rs
crates/dee-hn/tests/: error_json.rs  listing.rs  user_endpoint.rs
crates/dee-invoice/: AGENT.md  Cargo.toml  README.md
crates/dee-invoice/src/: main.rs
crates/dee-invoice/tests/: cli_contract.rs
crates/dee-llmfit/: AGENT.md  Cargo.toml  README.md
crates/dee-llmfit/data/: models.json
crates/dee-llmfit/src/: cli.rs  main.rs  models.rs  output.rs  scoring.rs
crates/dee-llmfit/src/commands/: fit.rs  info.rs  mod.rs  plan.rs  recommend.rs  search.rs  system.rs
crates/dee-llmfit/tests/: cli_contract.rs
crates/dee-mentions/: AGENT.md  Cargo.toml  README.md
crates/dee-mentions/src/: main.rs
crates/dee-mentions/tests/: cli_contract.rs
crates/dee-openrouter/: AGENT.md  Cargo.toml  README.md
crates/dee-openrouter/src/: main.rs
crates/dee-openrouter/tests/: cli_contract.rs  config_flow.rs
crates/dee-package/: AGENT.md  Cargo.toml  README.md
crates/dee-package/src/: main.rs
crates/dee-package/tests/: cli_contract.rs
crates/dee-parking/: AGENT.md  Cargo.toml  README.md
crates/dee-parking/src/: main.rs
crates/dee-parking/tests/: cli_contract.rs
crates/dee-ph/: AGENT.md  Cargo.toml  README.md
crates/dee-ph/src/: main.rs
crates/dee-ph/tests/: json_errors.rs
crates/dee-porkbun/: AGENT.md  Cargo.toml  README.md
crates/dee-porkbun/src/: main.rs
crates/dee-porkbun/tests/: json_errors.rs
crates/dee-pricewatch/: AGENT.md  Cargo.toml  README.md
crates/dee-pricewatch/src/: main.rs
crates/dee-pricewatch/tests/: cli_contract.rs
crates/dee-qr/: AGENT.md  Cargo.toml  README.md
crates/dee-qr/src/: main.rs
crates/dee-qr/tests/: error_codes.rs  roundtrip.rs
crates/dee-rates/: AGENT.md  Cargo.toml  README.md
crates/dee-rates/src/: cli.rs  commands.rs  display.rs  main.rs  models.rs
crates/dee-rates/tests/: fallback.rs  quiet_output.rs
crates/dee-receipt/: AGENT.md  Cargo.toml  README.md
crates/dee-receipt/src/: main.rs
crates/dee-receipt/tests/: cli_contract.rs
crates/dee-reddit/: AGENT.md  Cargo.toml  README.md
crates/dee-reddit/src/: main.rs
crates/dee-reddit/tests/: cli_contract.rs
crates/dee-ssl/: AGENT.md  Cargo.toml  README.md
crates/dee-ssl/src/: main.rs
crates/dee-ssl/tests/: chain_json.rs  error_classification.rs
crates/dee-stash/: AGENT.md  Cargo.toml  README.md
crates/dee-stash/src/: main.rs
crates/dee-stash/tests/: cli_contract.rs
crates/dee-timer/: AGENT.md  Cargo.toml  README.md
crates/dee-timer/src/: main.rs
crates/dee-timer/tests/: cli_contract.rs
crates/dee-todo/: AGENT.md  Cargo.toml  README.md
crates/dee-todo/src/: main.rs
crates/dee-todo/tests/: cli_contract.rs
crates/dee-transit/: AGENT.md  Cargo.toml  README.md
crates/dee-transit/src/: main.rs
crates/dee-transit/tests/: cli_contract.rs
crates/dee-trends/: AGENT.md  Cargo.toml  README.md
crates/dee-trends/src/: main.rs
crates/dee-trends/tests/: cli_contract.rs
crates/dee-webpage/: AGENT.md  Cargo.toml  README.md
crates/dee-webpage/src/: main.rs
crates/dee-webpage/tests/: cli_contract.rs
crates/dee-whois/: AGENT.md  Cargo.toml  README.md
crates/dee-whois/src/: main.rs
crates/dee-whois/tests/: date_parsing.rs  error_codes.rs  referral.rs
crates/dee-wiki/: AGENT.md  Cargo.toml  README.md
crates/dee-wiki/src/: cli.rs  commands.rs  main.rs  models.rs
crates/dee-wiki/tests/: json_errors.rs  summary_sentence.rs
scripts/: publish-unpublished.sh
website/: DESIGN-BRIEF.md  package-lock.json  package.json
website/public/: character.webm  llms.txt  robots.txt  rss.xml  sitemap.xml
website/public/i/: amazon  arxiv  contacts  crosspost  ebay  events  feed  food  gas  habit  hn  invoice  mentions  openrouter  parking  ph  porkbun  pricewatch  qr  rates  receipt  reddit  ssl  stash  timer  todo  transit  trends  whois  wiki
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: InkCharacter.tsx  ScrollProgress.tsx  Title.tsx  ToolList.tsx
website/src/data/: tools.json
