[workspace]
resolver = "2"
members = [
    "crates/dee-feed",
    "crates/dee-hn",
    "crates/dee-openrouter",
    "crates/dee-qr",
    "crates/dee-rates",
    "crates/dee-ssl",
    "crates/dee-whois",
    "crates/dee-wiki",
    "crates/dee-porkbun",
    "crates/dee-ph",
    "crates/dee-gas",
    "crates/dee-food",
    "crates/dee-events",
]
