[workspace]
resolver = "2"
members = [
    "crates/dee-amazon",
    "crates/dee-arxiv",
    "crates/dee-contacts",
    "crates/dee-feed",
    "crates/dee-food",
    "crates/dee-habit",
    "crates/dee-invoice",
    "crates/dee-mentions",
    "crates/dee-events",
    "crates/dee-gas",
    "crates/dee-hn",
    "crates/dee-openrouter",
    "crates/dee-parking",
    "crates/dee-ph",
    "crates/dee-pricewatch",
    "crates/dee-porkbun",
    "crates/dee-qr",
    "crates/dee-receipt",
    "crates/dee-reddit",
    "crates/dee-rates",
    "crates/dee-ssl",
    "crates/dee-stash",
    "crates/dee-todo",
    "crates/dee-timer",
    "crates/dee-trends",
    "crates/dee-transit",
    "crates/dee-whois",
    "crates/dee-wiki",
    "crates/dee-crosspost",
    "crates/dee-ebay",
]
