[package]
autobins = false
name = "dee-amazon"
version = "0.1.0"
edition = "2021"
description = "Amazon product search CLI with JSON output"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-amazon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.13.1", features = ["blocking"] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
toml = "1.0"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tiny_http = "0.12"
