[package]
autobins = false
name = "dee-arxiv"
version = "0.1.0"
edition = "2021"
description = "Academic paper search via arXiv and Semantic Scholar"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-arxiv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
