[package]
autobins = false
name = "dee-crosspost"
version = "0.1.0"
edition = "2021"
description = "Cross-post to major social platforms with scheduling and JSON output"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-crosspost"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "color"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.7"
predicates = "3"
tempfile = "3"
