[package]
autobins = false
name = "dee-llmfit"
version = "0.1.0"
edition = "2024"
description = "Detect your hardware and find local LLMs that fit well"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-llmfit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.38"
comfy-table = "7"
