[package]
autobins = false
name = "dee-mentions"
version = "0.1.0"
edition = "2021"
description = "Track brand mentions across public sources from the CLI"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-mentions"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "color"] }
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.7"
predicates = "3"
tempfile = "3"
