[package]
autobins = false
name = "dee-package"
version = "0.1.0"
edition = "2021"
description = "Package metadata lookup CLI for agents"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-package"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
urlencoding = "2"
