[package]
autobins = false
name = "dee-porkbun"
version = "0.1.0"
edition = "2021"
description = "Part of dee.ink CLI tools"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-porkbun"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
toml = "1.0"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
