[package]
autobins = false
name = "dee-pricewatch"
version = "0.1.0"
edition = "2021"
description = "Price monitoring CLI with JSON output"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-pricewatch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "color"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.13.1", features = ["blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tiny_http = "0.12"
