[package]
autobins = false
name = "dee-qr"
version = "0.1.0"
edition = "2021"
description = "Part of dee.ink CLI tools"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-qr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14"
image = "0.25"
rqrr = "0.8"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
