[package]
autobins = false
name = "dee-trends"
version = "0.1.0"
edition = "2021"
description = "Google Trends data as JSON from the CLI"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-trends"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
