[package]
autobins = false
name = "dee-wiki"
version = "0.1.0"
edition = "2021"
description = "Part of dee.ink CLI tools"
license = "MIT"
repository = "https://github.com/deeflect/dee-ink"
homepage = "https://dee.ink"
authors = ["Dee <dee@deeflect.com>"]

[[bin]]
name = "dee-wiki"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
owo-colors = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
